@@ -48,6 +48,7 @@ getJavaSpecificOpts() {
           --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
           --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
           --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
+          --add-opens=java.base/java.nio=ALL-UNNAMED \
           --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
           --illegal-access=permit \
           ${current_value}"
